# VaraBlocks

./: .gitignore  README.md
Backend/: Cargo.toml  README.md  rust-toolchain.toml
Backend/VaraBlocks/app/: Cargo.toml
Backend/VaraBlocks/app/src/: lib.rs
Backend/VaraBlocks/app/src/services/: contract_general_data_service.rs  mod.rs  queries_service.rs  signless_service.rs  virtual_contract_service.rs
Backend/VaraBlocks/app/src/state_globals_variables/: contract_general_data.rs  mod.rs  signless_accounts.rs  virtual_contracts.rs
Backend/VaraBlocks/app/src/varablocks_files/: contract_state.rs  contract_types.rs  contracts_io_types.rs  mod.rs  varablocks_types.rs  virtual_contract_enum.rs  virtual_contract_format.rs  virtual_contract_messages.rs  virtual_contract_state_handlers.rs  virtual_contract_struct.rs  virtual_contract_types.rs  virtual_contract_utils.rs
Backend/VaraBlocks/wasm/: Cargo.toml  build.rs  varablocks.idl
Backend/VaraBlocks/wasm/src/: lib.rs
Backend/contract-test/: Cargo.toml  build.rs
Backend/contract-test/io/: Cargo.toml
Backend/contract-test/io/src/: lib.rs
Backend/contract-test/src/: contract.rs
Backend/main-contract/: Cargo.toml  build.rs
Backend/main-contract/io/: Cargo.toml
Backend/main-contract/io/src/: contract_enum.rs  contract_messages.rs  contract_state.rs  contract_struct.rs  contract_types.rs  contract_utils.rs  contracts_io_types.rs  lib.rs  macros.rs  varablocks_types.rs  virtual_contract_enum.rs  virtual_contract_format.rs  virtual_contract_messages.rs  virtual_contract_state_handlers.rs  virtual_contract_struct.rs  virtual_contract_types.rs  virtual_contract_utils.rs
Backend/main-contract/src/: contract.rs
Backend/main-contract/tests/: main_contract_test.rs  utils.rs
Backend/oracle-server/: Cargo.toml
Backend/oracle-server/src/: main.rs  nn_data.rs
Frontend/: README.md  package.json
Frontend/apps/VaraBlocks/: README.md  index.html  package.json
Frontend/apps/VaraBlocks/src/: app.scss  app.tsx  main.tsx
Frontend/apps/VaraBlocks/src/app/: consts.ts  types.d.ts  utils.ts
Frontend/apps/VaraBlocks/src/app/Context/: SignlessDataContext.tsx  index.ts
Frontend/apps/VaraBlocks/src/app/SliceReducers/: index.ts
Frontend/apps/VaraBlocks/src/app/app_types/: types.d.ts
Frontend/apps/VaraBlocks/src/app/hocs/: index.tsx
Frontend/apps/VaraBlocks/src/app/hooks/: api.ts  index.ts  useCanvas.tsx  useContractUtils.ts  useSignlessUtils.ts  useSignlessUtils.tsx  useVirtualContractUtils.ts  useVoucherUtils.ts
Frontend/apps/VaraBlocks/src/app/hooks2/: useContractUtils.ts  useSignlessUtils.ts  useVoucherUtils.ts
Frontend/apps/VaraBlocks/src/app/store/: store.ts
Frontend/apps/VaraBlocks/src/components/: index.ts
Frontend/apps/VaraBlocks/src/components/ButtonActionsForBlocks/: ButtonActionsForBlocks.scss  ButtonActionsForBlocks.tsx
Frontend/apps/VaraBlocks/src/components/ButtonAddComponent/: ButtonAddComponent.scss  ButtonAddComponent.tsx
Frontend/apps/VaraBlocks/src/components/ButtonPrediction/: ButtonPrediction.scss  ButtonPrediction.tsx
Frontend/apps/VaraBlocks/src/routes/: index.tsx  root.tsx
Frontend/apps/VaraBlocks/src/routes/index/: Index.scss  (+1 more)
(+73 files in other folders)
