[workspace]
resolver = "2"
# Keep in the lexicographic order!
# Remove a member if it's used as a dependency in the workspace.
members = [
    "contract-test",
    "main-contract",
    "oracle-server",
]

[workspace.package]
documentation = "https://dapps.gear.rs"
authors = ["dh29550@gmail.com"]
version = "1.0.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]

# Local IO-crates
# Keep in the lexicographic order!

contract-test-io.path = "contract-test/io"
main-contract-io.path = "main-contract/io"

# Gear

galloc = "1.3.1"
gcli = "1.3.1"
gclient = "1.3.1"
gcore = "1.3.1"
gear-wasm-builder = "1.3.1"
gmeta = "1.3.1"
gsdk = "1.3.1"
gstd = "1.3.1"
gtest = "1.3.1"

# External

primitive-types = { version = "0.12", default-features = false }
sp-core = { version = "29.0.0", default-features = false, features = ["full_crypto", "sp-externalities"] }
sp-core-hashing = { version = "16", default-features = false }
tokio = "1"
blake2-rfc = "0.2"
hex-literal = "0.4"
hex = { version = "0.4", default-features = false }
async-trait = "0.1"
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
indexmap = { version = "2", default-features = false }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }
schnorrkel = { version = "0.11.4", default-features = false, features = ["u64_backend"] }
syn = { version = "2", default-features = false }
quote = "1"
clap = { version = "4", default-features = false, features = ["std"] }
enum-iterator = "1"
xshell = "0.2"
anyhow = "1"
sha2 = "0.10"
num-traits = { version = "0.2", default-features = false }

