[package]
name = "oracle-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
gclient = "1.0.4"
gcore = "1.0.4"
tokio = { version = "1.35.1", features = ["full"] }
mini-redis = "0.4"
gear-core = "1.0.4"
hex = "0.4.3"
gstd = "1.0.4"
hex-literal = "0.4.1"
hex_fmt = "0.3.0"